--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -60,6 +60,10 @@ a.logo
 	padding: 8px 0
 	font-size: 0.9em
 	margin-bottom: 0
+	+border-radius(0)
+
+.post-view-container .breadcrumb
+	padding: 12px 15px
 
 /* post-index */
 .post-index-item
@@ -242,7 +246,7 @@ a.logo
 	display: block
 	font-family: $font_headings
 	font-size: 2.1em
-	padding: 27px 15px 10px 15px
+	padding: 20px 15px 10px 15px
 	line-height: 1.3em
 	+text-shadow(1px, 1px, 0, darken($color_background, 3%), 1.0)
 
