Tweak to comments border box

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -747,11 +747,10 @@ footer
 	font-family: $font_body !important
 	font-weight: lighter
 	color: darken($color_text, 10%) !important
-	border: thin solid lighten($color_text, 40%) !important
+	border: thin solid lighten($color_text, 60%) !important
 	background-color: lighten($color_background, 3%) !important
-	resize: vertical
+	resize: none
 	margin: 0 !important
-	+box-shadow(2px, 2px, 0, darken($color_background, 60%), .1)
 	+border-radius(3px)
 
 body.cke_editable.cke_editable_themed.cke_contents_ltr
