--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -20,10 +20,10 @@
 			All
 		{% endif %}
 
-		<span class="badge">({{posts|length}})</span>
+		<span class="badge">({{posts.items|length}})</span>
 	</h3>
 
-		{% for post in posts %}
+		{% for post in posts.items %}
 		<div class="row post-index-item
 								{{ loop.cycle('odd', 'even') }}">
 			<div class="col-md-2 col-sm-2 col-xs-2">
@@ -56,14 +56,14 @@
 			<div class="col-md-10 col-sm-10 col-xs-10">
 
 				<a class="post-index-item-title"
-					 href="
-					 {% if post.post_type.url == 'link' %}
-					 	{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}
-					 {% else %}
-					 	{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}
-					 {% endif %}
-					 "
-					 title="{{post.title}}">
+					href="
+					{% if post.post_type.url == 'link' %}
+						{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}
+					{% else %}
+						{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}
+					{% endif %}
+					"
+					title="{{post.title}}">
 					{{post.title}}
 				</a>
 
@@ -102,6 +102,24 @@
 		{% include '_sidebar.html' %}
 	</div>
 </div>
+
+<nav>
+	<ul class="pagination pagination-lg">
+		{%- for post in posts.iter_pages() %}
+			{% if post %}
+				{% if post != posts.page %}
+					<li><a href="{{ url_for('posts.index', page=post) }}">{{ post }}</a><li>
+				{% else %}
+					<li class="active"><a href="#">{{ post }}</a></li>
+				{% endif %}
+			{% else %}
+				<span class="ellipsis">…</span>
+			{% endif %}
+		{%- endfor %}
+	</ul>
+</nav>
+
+
 {% endblock %}
 
 {% block footer_scripts %}
