Prevent voting when not logged in. Minor tweaks everywhere.

--- a/blender-today/application/static/sass/_helpers.sass
+++ b/blender-today/application/static/sass/_helpers.sass
@@ -97,7 +97,7 @@ $screen-md-max: $screen-lg-min - 1
 
 .disabled
 	opacity: 0.65 !important
-	pointer-events: none !important
+	+pointer-events-none
 	+user-select-none
 
 .user-select-none
