Added username in settings form

--- a/blender-today/application/templates/settings/profile.html
+++ b/blender-today/application/templates/settings/profile.html
@@ -25,6 +25,10 @@
                             {{ form.last_name.label }} 
                             {{ form.last_name(class='form-control', placeholder='Your family name') }}
                         </div>
+                        <div class="form-group">
+                            {{ form.username.label }} 
+                            {{ form.username(class='form-control', placeholder='Your nickname') }}
+                        </div>
                         <input type="submit" class="btn btn-default btn-block" value="Go">
                     </form>
                 </div>
