Flash comments on post

--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -260,7 +260,7 @@
 
 	var print_comment = function(comment) {
 	comment = 
-	'<div class="post-view-comments-item even"> \
+	'<div class="post-view-comments-item flash"> \
 		<div class="row"> \
 			<div class="col-md-1 col-sm-1 col-xs-2">\
 				<div class="post-view-comments-avatar">\
