Sign in to submit popover

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -648,7 +648,7 @@ footer
 	border: thin solid darken($color_brand_main, 3%)
 	+border-radius(3px)
 	+text-shadow(1px, 1px, 0, black, 0.2)
-	+box-shadow(1px, 2px, 2px, darken($color_background, 10%), 1.0)
+	+box-shadow(1px, 2px, 2px, black, 0.1)
 
 /* Pagination */
 .pagination
@@ -732,6 +732,7 @@ footer
 		&:hover
 			color: white !important
 			cursor: pointer
+
 
 li.navbar-submit a:hover,
 li.navbar-submit a:active,
