--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -48,7 +48,12 @@
         <nav class="collapse navbar-collapse" id="navbar-collapse-menu">
           <ul class="nav navbar-nav navbar-right">
 
-            <li data-dialog="submit" class="navbar-submit trigger">
+            <li data-dialog="submit"
+                class="navbar-submit{% if current_user.is_anonymous() %} popover-submit{% endif %}"
+                {% if current_user.is_anonymous() %}
+                 data-toggle="popover" data-trigger="hover" data-placement="bottom"
+                 data-content="Sign in to Submit"
+                {% endif %}>
               <a>Submit</a>
             </li>
 
@@ -160,70 +165,77 @@
     <script src="{{url_for('static', filename='js/classie.js')}}"></script>
     <script src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js"></script>
     <script type="text/javascript">
-      var csrftoken = $('meta[name=csrf-token]').attr('content');
 
-      $.ajaxSetup({
-        beforeSend: function(xhr, settings) {
-          if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
-            xhr.setRequestHeader("X-CSRFToken", csrftoken)
+
+      {% if current_user.is_anonymous() %}
+        $('.popover-submit').popover();
+      {% else %}
+        var csrftoken = $('meta[name=csrf-token]').attr('content');
+
+        $.ajaxSetup({
+          beforeSend: function(xhr, settings) {
+            if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
+              xhr.setRequestHeader("X-CSRFToken", csrftoken)
+            }
           }
-        }
-      });
+        });
 
-      $("form").on("submit", function (event) {
-          event.preventDefault();
-          //$('#edit_notifications').html('<i>Updating</i>');
-          var data = $(this).serialize();
-          url = $(this).attr('action');
-          var formData = new FormData($(this)[0]);
-          $.ajax( {
-                url: url,
-                type: 'POST',
-                data: formData,
-                processData: false,
-                contentType: false,
-                cache: false
-              } )
-          .done(function() {
-              //window.location = data['post_url'];
-          })
-          .fail(function() {
-              //$('#edit_notifications').html('Error: could not update asset');
-          });
-      });
+        $("form").on("submit", function (event) {
+            event.preventDefault();
+            //$('#edit_notifications').html('<i>Updating</i>');
+            var data = $(this).serialize();
+            url = $(this).attr('action');
+            var formData = new FormData($(this)[0]);
+            $.ajax( {
+                  url: url,
+                  type: 'POST',
+                  data: formData,
+                  processData: false,
+                  contentType: false,
+                  cache: false
+                } )
+            .done(function() {
+                //window.location = data['post_url'];
+            })
+            .fail(function() {
+                //$('#edit_notifications').html('Error: could not update asset');
+            });
+        });
 
-      (function() {
-        var dlgtrigger = document.querySelector( '[data-dialog]' ),
-          somedialog = document.getElementById( dlgtrigger.getAttribute( 'data-dialog' ) ),
-          dlg = new DialogFx( somedialog );
-        dlgtrigger.addEventListener( 'click', dlg.toggle.bind(dlg) );
-      })();
+        (function() {
+          var dlgtrigger = document.querySelector( '[data-dialog]' ),
+            somedialog = document.getElementById( dlgtrigger.getAttribute( 'data-dialog' ) ),
+            dlg = new DialogFx( somedialog );
+          dlgtrigger.addEventListener( 'click', dlg.toggle.bind(dlg) );
+        })();
 
-      CKEDITOR.replace( 'post_content', {
-        removePlugins: 'elementspath',
-        resize_enabled: false
-      });
+        CKEDITOR.replace( 'post_content', {
+          removePlugins: 'elementspath',
+          resize_enabled: false
+        });
 
-      CKEDITOR.config.forcePasteAsPlainText = true;
-      $('.select-change').click(function(){ 
-          $('#post_type_id').val($(this).data('val')).trigger('change');
-      })
+        CKEDITOR.config.forcePasteAsPlainText = true;
+        $('.select-change').click(function(){ 
+            $('#post_type_id').val($(this).data('val')).trigger('change');
+        })
 
-      $('.select-change').click(function(){ 
-        $('.post-submit-div-title').show();
-        $('.post-submit-div-category').show();
-        $('.post-submit-div-picture').show();
-        $('.post-submit-div-submit').show();
+        $('.select-change').click(function(){ 
+          $('.post-submit-div-title').show();
+          $('.post-submit-div-category').show();
+          $('.post-submit-div-picture').show();
+          $('.post-submit-div-submit').show();
 
-        if ($('#post_type_id').val() == 1){
-          $('.post-submit-link').show();
-          $('.post-submit-article').hide();
-        };
-        if ($('#post_type_id').val() == 2){
-          $('.post-submit-link').hide();
-          $('.post-submit-article').show();
-        };
-      });
+          if ($('#post_type_id').val() == 1){
+            $('.post-submit-link').show();
+            $('.post-submit-article').hide();
+          };
+          if ($('#post_type_id').val() == 2){
+            $('.post-submit-link').hide();
+            $('.post-submit-article').show();
+          };
+        });
+
+      {% endif %}
 
     </script>
 
