--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -9,9 +9,8 @@
 {% endblock%}
 
 {% block body %}
-<div class="row post-index">
-	<div class="col-md-9">
-
+<div class="row">
+	<div class="col-md-9 post-index">
 	<h3>{% if title == 'index_category' %}
 			<a href="{{url_for('posts.index')}}">All</a>
 			<strong>·</strong>
