--- a/blender-today/application/templates/settings/account.html
+++ b/blender-today/application/templates/settings/account.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-9 user-settings">
 
           {{sidebar_navigation(title)}}
 
