--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block body %}
-<div class="row post-view">
-<div class="col-md-9">
+<div class="row">
+<div class="col-md-9 post-view">
 	<div class="post-view-container">
 
 		<ol class="breadcrumb">
