--- a/blender-today/application/templates/settings/profile.html
+++ b/blender-today/application/templates/settings/profile.html
@@ -3,35 +3,73 @@
 
 {% block body %}
 <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-9 user-settings">
         <div role="tabpanel">
           {{sidebar_navigation(title)}}
 
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="profile">
-                <h2>Profile Settings</h2>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Profile Settings</h2>
+                    </div>
+                </div>
 
-                <form role="form" method="POST" action="{{url_for('settings.profile')}}">
-                    {{ form.hidden_tag() }}
-                    <div class="form-group">
-                        {{ form.email.label }} 
-                        {{ form.email(class='form-control', placeholder='Email address') }}
+                <div class="row">
+                    <div class="col-md-6">
+                        <form role="form" method="POST" action="{{url_for('settings.profile')}}">
+                            {{ form.hidden_tag() }}
+                            <div class="form-group">
+                                {{ form.email.label }} 
+                                {{ form.email(class='form-control', placeholder='Email address') }}
+                                {% if form.email.errors %}
+                                    <ul class="error">
+                                        {% for error in form.email.errors %}<li>{{ error }}</li>{% endfor %}
+                                    </ul>
+                                {% endif %}
+                            </div>
+                            <div class="form-group">
+                                {{ form.first_name.label }} 
+                                {{ form.first_name(class='form-control', placeholder='Your first name') }}
+                                {% if form.first_name.errors %}
+                                    <ul class="error">
+                                        {% for error in form.first_name.errors %}<li>{{ error }}</li>{% endfor %}
+                                    </ul>
+                                {% endif %}
+                            </div>
+                            <div class="form-group">
+                                {{ form.last_name.label }} 
+                                {{ form.last_name(class='form-control', placeholder='Your family name') }}
+                                {% if form.last_name.errors %}
+                                    <ul class="error">
+                                        {% for error in form.last_name.errors %}<li>{{ error }}</li>{% endfor %}
+                                    </ul>
+                                {% endif %}
+                            </div>
+                            <div class="form-group">
+                                {{ form.username.label }} 
+                                {{ form.username(class='form-control', placeholder='Your Nickname') }}
+                                {% if form.username.errors %}
+                                    <ul class="error">
+                                        {% for error in form.username.errors %}<li>{{ error }}</li>{% endfor %}
+                                    </ul>
+                                {% endif %}
+                            </div>
+                            <button type="submit" class="btn btn-default btn-success btn-block" value="Go">
+                                <i class="fa fa-check"></i> Save Changes
+                            </button>
+                        </form>
                     </div>
-                    <div class="form-group">
-                        {{ form.first_name.label }} 
-                        {{ form.first_name(class='form-control', placeholder='Your first name') }}
+                    <div class="col-md-6">
+                        <div class="user-settings-avatar">
+                            <a href="http://gravatar.com" target="_blank">
+                              <img class="img-circle" src="{{current_user.gravatar(size=256)}}"
+                                   title="Gravatar Profile Picture"/>
+                              <small>Change Gravatar <i class="fa fa-angle-double-right"></i></small>
+                            </a>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        {{ form.last_name.label }} 
-                        {{ form.last_name(class='form-control', placeholder='Your family name') }}
-                    </div>
-                    <div class="form-group">
-                        {{ form.username.label }} 
-                        {{ form.username(class='form-control', placeholder='Your nickname') }}
-                    </div>
-                    <input type="submit" class="btn btn-default btn-block" value="Go">
-                </form>
-
+                </div>
             </div>
           </div>
         </div>
